--- a/game.css
+++ b/game.css
@@ -6,13 +6,14 @@ h1, h2 {
   text-align: center;
 }
 #board{
+  border: 2px solid #8CC8DD;
   margin: 0 auto;
 }
 
 #board td{
-  border: 1px solid #ddd;
-  width: 18px;
-  height: 18px;
+  border: .05px solid rgb(255, 255, 255);
+  width: 3px;
+  height: 3px;
 }
 
 td.alive {
